# cool

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  anything  build.rs  cool-docs.html  cool.toml.example  install.sh  rustfmt.toml  test  test.cool  test_class  test_class.cool  test_closure.cool  test_except.cool  test_while
.github/: pull_request_template.md
apps/: calc.cool  control.cool  pulse.cool  pulsekit.cool  shell.cool
benchmarks/: README.md
cmd/: add.cool  bundle.cool  install.cool  new.cool  pkg.cool  publish.cool  release.cool  task.cool
coolapps/: browse.cool  edit.cool  http.cool  shell.cool  snake.cool
coolc/: compiler_v1.cool  compiler_v2.cool  compiler_v4.cool  compiler_v5.cool  compiler_v6.cool  compiler_v7.cool  compiler_v8.cool  compiler_vm.cool  debug_expr.cool  debug_full.cool  debug_gen.cool  debug_gen2.cool  debug_gen3.cool  debug_lexer3.cool  debug_lexer_simple.cool  debug_parser.cool  debug_parser2.cool  debug_print.cool  debug_print2.cool  debug_tok.cool  debug_tok2.cool  debug_tok3.cool  debug_toktype.cool  debug_toktype2.cool  debug_vm.cool  debug_vm2.cool  debug_vm3.cool  lexer.cool  parser.cool  test_class.cool  test_len.cool  test_lexer.cool  test_lexer2.cool  test_lexer3.cool  test_parser.cool  test_simple.cool  test_tuple.cool  test_tuple2.cool  test_tuple3.cool  test_type.cool  (+4 more)
coolos/: http.cool  notes.cool  shell.cool  top.cool
docs/: INSTALL.md  PACKAGE_CHANNELS.md  RELEASE_1_0_0.md  RELEASE_RUNBOOK.md  RELEASE_TRUST.md  RELEASE_VALIDATION.md  SUPPORT_MATRIX.md
examples/: data_structures.cool  (+94 more)
(+174 files in other folders)
