[package]
name = "cool"
version = "1.0.0"
edition = "2021"

[dependencies]
rustyline = "14"
regex = "1"
crossterm = "0.28"
libloading = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
md5 = "0.7"
sha1 = "0.10"
sha2 = "0.10"
toml = "0.8"
rusqlite = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
object = "0.37"
libc = "0.2"

[dependencies.inkwell]
version = "0.4"
features = ["llvm17-0"]

[target.'cfg(windows)'.dependencies]
llvm-sys = { version = "170", features = ["disable-alltargets-init", "no-llvm-linking"] }

[build-dependencies]
cc = "1"
