[package]
name = "cool"
version = "1.0.0"
edition = "2021"

[dependencies]
rustyline = "14"
regex = "1"
crossterm = "0.28"
libloading = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
md5 = "0.7"
sha1 = "0.10"
sha2 = "0.10"
toml = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
object = "0.37"
libc = "0.2"

[dependencies.inkwell]
version = "0.4"
default-features = false
features = ["llvm17-0"]
